# Object-Serialization

./: CMakeLists.txt  README.md  base64.cpp  base64.h  binary.h  buffer.cpp  buffer.h  data.xml  decode_data.xml  defineList.h  details.md  encode_data.txt  float.cpp  float.h  main.cpp  seriXml.h  struct.xml  test.cpp  test.h  tinyxml2.cpp  tinyxml2.h  typeJudger.h  userDefined.cpp  userDefined.h
